# simplified-ds

./: 1-preprocessing.ipynb  2-results.ipynb  2-results.py  3-analysis.ipynb  Case1.ipynb  Case2.ipynb  Case3.ipynb  README.md  df_ds.csv  df_ds.pickle  df_dsbc.csv  df_dsbc.pickle  ensemble.py  pyproject.toml  scoring.py  simulator.py  tsanfleuron.py  utils.py
